# kinhotelrust

./: .env  Cargo.toml  Dockerfile  Procfile  deploy.yaml  netlify.toml  spec.yaml
assets/: kinhotelserver.service  kinhotelzarate.service  tide-config.ini
debian/: kin.service
debian/scripts/: postinst  postrm  prerm
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  lobby.rs  main.rs  messages.rs  settings.rs  start_connection.rs  startup.rs  telemetry.rs  test.rs  ws.rs
src/api/: login_api.rs  mod.rs  rented_api.rs  user_api.rs
src/auth/: authentication.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/models/: mod.rs  rented_model.rs  user_model.rs
src/repository/: mod.rs  mongo_init.rs  mongodb_repo.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
src/websocket/: all.rs  lobby.rs  messages.rs  mod.rs  mod3.rs  server.rs  server2.rs  server3.rs  start_connection.rs  web_server.rs  wss.rs
src/websocket2/: mod.rs  server_shit.rs  web_server2.rs
tests/: health_check.rs
