[package]
name = "kinhotelserver"
version = "0.1.0"
edition = "2021"
authors = ["Gonzalo Gil <gonzalogg1975@gmail.com>"]


[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
actix-files = "0.6.1"
actix-service = "2.0.2"
chrono = "0.4.19"
log = "0.4.17"
env_logger = "0.9.0"
serde_derive = "1.0.137"
futures = "0.3.21"

dotenv = "0.15.0"
actix = "0.13.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
actix-web-actors = "4.1.0"
actix-rt = "2.7.0"
ws = "0.9.2"
derive_more = "0.99.9"
config = "0.13.2"

jsonwebtoken = "8.3.0"
actix-session = "0.7.2"
bcrypt = "0.14.0"
secrecy = "0.8.0"
thiserror = "1.0.40"
anyhow = "1.0.70"
argon2 = "0.5.0"
tracing = "0.1.37"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
